ec2.tf
    resource "aws_key_pair" "assesment-key" {
  key_name   = "assesment-key"
  public_key = var.ssh_public_key
}
resource "aws_instance" "master" {
  ami                    = "ami-0f8a61b66d1accaee"
  instance_type          = "c7i-flex.large"
  subnet_id      = aws_subnet.public1.id
  vpc_security_group_ids = [aws_security_group.assesment-sg.id]
  key_name               = aws_key_pair.assesment-key.key_name
  
  root_block_device {
    volume_size = 25
    volume_type = "gp3"
  }
  

  
  tags = {
    Name = "assesment-master"
  }
}
resource "aws_instance" "worker-1" {
  ami                    = "ami-0f8a61b66d1accaee"
  instance_type          = "c7i-flex.large"
  subnet_id      = aws_subnet.public1.id
  vpc_security_group_ids = [aws_security_group.assesment-sg.id]
  key_name               = aws_key_pair.assesment-key.key_name
  
  root_block_device {
    volume_size = 25
    volume_type = "gp3"
  }
  

  
  tags = {
    Name = "assesment-worker-1"
  }
}
resource "aws_instance" "worker-2" {
  ami                    = "ami-0f8a61b66d1accaee"
  instance_type          = "c7i-flex.large"
  subnet_id      = aws_subnet.public1.id
  vpc_security_group_ids = [aws_security_group.assesment-sg.id]
  key_name               = aws_key_pair.assesment-key.key_name
  
  root_block_device {
    volume_size = 25
    volume_type = "gp3"
  }
  

  
  tags = {
    Name = "assesment-worker-2"
  }
}
